# cognite-sdk-python-experimental

./: .bulldozer.yaml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTEXTUALIZATION.md  EXTRACTION_PIPELINES&RUNS.MD  INTEGRATIONS&RUNS.MD  Jenkinsfile  README.md  codecov.yml  generate_from_spec.py  pyproject.toml  readthedocs_requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: release.yaml  test_and_build.yml
cognite/experimental/: __init__.py  _client.py  _constants.py  _context_client.py  _relationships_query.py  client.py  exceptions.py  utils.py
cognite/experimental/_api/: alerts.py  annotations.py  annotations_v2.py  assets.py  document_parsing.py  entity_extraction.py  entity_matching.py  extractionpipelineruns.py  extractionpipelines.py  functions.py  geospatial.py  hosted_extractors.py  integrationruns.py  integrations.py  labels.py  legacy_annotations.py  match_rules.py  plot_extraction.py  pluto.py  pnid_object_detection.py  pnid_parsing.py  relationships.py  resource_typing.py  schema_completion.py  simulators.py  synthetic_time_series.py  templatecompletion.py  templates.py  transformation_jobs.py  transformation_notifications.py  transformation_schedules.py  transformation_schema.py  transformations.py  types.py  unstructured.py  vision.py
cognite/experimental/data_classes/: __init__.py  alerts.py  annotations.py  annotations_v2.py  assets.py  contextualization.py  extractionpipelineruns.py  extractionpipelines.py  functions.py  geospatial.py  hosted_extractors.py  integrationruns.py  integrations.py  labels.py  legacy_annotations.py  match_rules.py  pluto.py  relationships.py  shared.py  simulators.py  templates.py  transformation_jobs.py  transformation_notifications.py  transformation_schedules.py  transformation_schema.py  transformations.py  types.py  unstructured.py  vision.py
docs/: Makefile
docs/source/: cognite.rst  conf.py  index.rst
openapi/: generator.py  openapi.py  utils.py
tests/: conftest.py  test_client.py  test_signatures.py  utils.py
tests/tests_integration/: test_cognite_client.py  test_hosted_extractors.py  test_relationships_query.py
tests/tests_integration/test_alerts/: test_alerts.py
tests/tests_integration/test_api/: test_assets.py  test_geospatial.py  test_labels.py  test_synthetic_time_series.py  test_templates.py  test_transformation_jobs.py  test_transformation_notifications.py  test_transformation_schedules.py  test_transformation_schema.py  test_transformations.py  test_types.py
tests/tests_integration/test_contextualization/: test_annotations.py  test_annotations_v2.py  test_diagrams.py  test_entity_extraction.py  test_entity_matching.py  test_legacy_annotations.py  test_plot_extraction.py  test_pnid_object_detection.py  test_pnid_parsing.py  test_resource_typing.py  test_template_completion.py
tests/tests_integration/test_simulators/: test_simulators.py
tests/tests_integration/test_vision/: test_annotate.py  test_asset_detection.py  test_extract.py
tests/tests_unit/test_api/: test_extraction_pipelines.py  test_functions.py  (+6 more)
(+39 files in other folders)
