[tool.poetry]
name = "cognite-sdk-experimental"
version = "0.43.0"
description = "Experimental additions to the Python SDK"
authors = ["Sander Land <sander.land@cognite.com>"]

packages = [
    { include="cognite", from="." },
]

[tool.black]
line-length = 120
target_version = ['py37']
include = '\.py$'

[tool.isort]
profile = "black"
line_length = 120

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py36,py37,py38

[testenv]
setenv =
    COGNITE_API_KEY={env:COGNITE_API_KEY}
    COGNITE_BASE_URL={env:COGNITE_BASE_URL}
    COGNITE_CLIENT_NAME={env:COGNITE_CLIENT_NAME}
    COGNITE_PROJECT={env:COGNITE_PROJECT}

deps =
    pytest
    pytest-cov
    pytest-asyncio

commands =
    coverage run --source cognite -m pytest -v tests
    coverage xml
"""

[tool.poetry.dependencies]
python = "^3.6.1"
cognite-sdk = "^2.10"
responses = "^0.10.12"
sympy = "^1.3.0"
typing-extensions = "^3.7.4"
pandas = "^1.1"
regex = "^2020.11.13"

[tool.poetry.dev-dependencies]
pre-commit = "^2.1.1"
pytest = "^5.3.5"
pytest-cov = "^2.8.1"
tox = "^3.14.5"
tox-pyenv = "^1.1.0"
sphinx = "^2.4.4"
sphinx-rtd-theme = "^0.4.3"
twine = "^3.1.1"

[[tool.poetry.source]]
name = "snakepit"
url = "https://cognite.jfrog.io/cognite/api/pypi/snakepit/simple"
[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
